--- a/vignettes/adverse_events.Rmd
+++ b/vignettes/adverse_events.Rmd
@@ -17,11 +17,9 @@ This tutorial demonstrates how to generate adverse event (AE) summary tables in 
 
 In this tutorial, it is demonstrated how to use two key functions:
 
--   'ae_table_grade', which creates table(s) summarising AE grades.
+-   `ae_table_grade`, which creates table(s) summarising AE grades overall.
 
--   'ae_table_soc', which summarises adverse events by System Organ Class (SOC) according to CTCAE terminology. It reports the number and proportion of patients experiencing at least one event within each SOC, based on their maximum recorded AE grade.
-
-These tables can be generated for single-arm and more than one arm clinical trials.
+-   `ae_table_soc`, which summarises adverse events by System Organ Class (SOC) and by grades. It reports the number and proportion of patients experiencing at least one event within each SOC, based on their maximum recorded AE grade.
 
 First, install packages if needed and load them.
 
@@ -37,52 +35,55 @@ The function `grstat_example()` is used as an example dataset to illustrate the 
 
 This analysis focuses on two datasets:
 
--   ae, which contains data on adverse events.
+-   `ae`, which contains data on adverse events.
 
--   enrolres, which includes all patients and their respective treatment arms."
+-   `enrolres`, which includes all patients and their respective treatment arms.
 
 ```{r}
 
 tm = grstat_example()
 attach(tm)
 
-head(ae)
+head(ae, 4)
 
-head(enrolres)
+head(enrolres,4)
 
 ```
 
-# Grade Tables: 'ae_table_grade'
+# Grade Tables only: `ae_table_grade`
 
-Create adverse event (AE) grade tables using '`ae_table_grade()'`.
+Create adverse event (AE) grade tables using `ae_table_grade()`.
 
 By default, the function `ae_table_grade` produces three table variants within a single output.
 
--   The most common variant is **`variant = "max"`**, which generates the table of maximum AE grade per patient. In this case, the percentages reflect the proportion of patients whose maximum AE grade was as indicated.
+-   The most common variant is **`variant = "max"`**, which generates the table of maximum AE grade per patient, where N = total number of patients.
 
--   The second variant, **`variant = "sup"`**, summarises the maximum grade greater than or equal to a specified grade per patient. Here, the percentages reflect the proportion of patients whose maximum AE grade was superior or equal to the indicated grade.
+-   The second variant, **`variant = "sup"`**, summarises the grades greater than or equal to a specified grade per patient where n is the number of unique patients who have experienced at least one AE of grade greater than or equal to X.
 
--   The third variant, **`variant = "eq"`**, presents all grades for all patients. In this table, each proportion represents the number of patients who experienced a given grade at least once, i.e. the percentages reflect the proportion of patients who experienced the indicated AE grade at least once.
+-   The third variant, **`variant = "eq"`**, presents all grades for all patients. In this table, each proportion represents the number of patients who experienced a given grade at least once where n is the number of unique patients who have experienced at least one AE of grade X.
 
-## Table of AE grade
+## Default AE Table Grades - incuding All Variants (Max, Sup, Eq)
 
 ```{r}
-ae_table_grade(df_ae=ae, df_enrol=enrolres, arm=NULL) %>% 
-  as_flextable(header_show_n=TRUE) %>%
-  fontsize(size = 8, part = "all")
+ae_table_grade(df_ae=ae, df_enrol=enrolres) %>% 
+  as_flextable(header_show_n=TRUE) %>% 
+  fontsize(size = 8, part = "all") %>% 
+  padding(padding.top=0, padding.bottom=0)
 ```
 
-As an extra example of AE grade table, a table of maximum grade per patient and per arm (i.e. variant = "max") is also presented.
+## Custom table of maximum AE grade per patient per arm
 
-## Table of maximum AE grade per patient per arm
+As an extra example of AE grade table, a table of maximum grade per patient and per arm (i.e. variant = "max") is also presented.
 
 ```{r}
 ae_table_grade(df_ae=ae, df_enrol=enrolres, arm="arm", variant="max") %>% 
   as_flextable(header_show_n=TRUE) %>% 
-  add_footer_lines("Percentages reflect the proportion of patients whose maximum AE grade was as indicated per given arm.")
+  add_footer_lines("Percentages reflect the proportion of patients whose maximum AE grade was as indicated per given arm.") %>% 
+   fontsize(size = 8, part = "all") %>% 
+  padding(padding.top=0, padding.bottom=0)
 ```
 
-# SOC's tables: ae_table_soc
+# SOC's tables: `ae_table_soc`
 
 The ae_table_soc() function generates System Organ Class (SOC)–level summary tables of adverse events (AEs). These tables provide an overview of AE frequencies and grades, either by SOC, by Preferred Term (PT), or stratified by treatment arm. They are useful for identifying patterns of toxicity across organ systems and comparing safety profiles between study arms.
 
